force-app/main/default/objects/Subscription_Contact__c/fields/Date_Updated_to_Active_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated_to_Active_Candidate__c</fullName>
    <inlineHelpText>Shows when the status of the reference was changed to Active or Candidate for Reference</inlineHelpText>
    <label>Date Updated to Active/Candidate</label>
    <type>Date</type>
</CustomField>