force-app/main/default/objects/Subscription_Contact__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Target for site visit</fullName>
            </value>
            <value>
                <fullName>Visit Complete - request in-process</fullName>
            </value>
            <value>
                <fullName>Visit Complete - request not feasible</fullName>
            </value>
            <value>
                <fullName>Visit Complete - request on hold</fullName>
            </value>
            <value>
                <fullName>Visit Complete - request confirmed</fullName>
            </value>
            <value>
                <fullName>CRM - Contacted to confirm</fullName>
            </value>
            <value>
                <fullName>CRM - Contacted  &amp; in-discussion</fullName>
            </value>
            <value>
                <fullName>CRM - Contacted &amp; Confirmed</fullName>
            </value>
            <value>
                <fullName>CRM - Contacted &amp; Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>