force-app/main/default/objects/Subscription_Contact__c/fields/Intapp_Reference_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Reference_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intapp Reference Contact 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscription_Contact1</relationshipName>
    <type>Lookup</type>
</CustomField>