force-app/main/default/objects/Subscription_Contact__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <inlineHelpText>What package(s) is this contact a reference for?</inlineHelpText>
    <label>Package</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Integrate</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
            <value>
                <fullName>Time Capture (TB)</fullName>
            </value>
            <value>
                <fullName>Time Core</fullName>
            </value>
            <value>
                <fullName>Time Mobile</fullName>
            </value>
            <value>
                <fullName>Time TTM</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
            <value>
                <fullName>Time - Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>