force-app/main/default/objects/Subscription_Contact__c/fields/Primary_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subscription__c</fullName>
    <formula>Subscription__r.Primary_Subscription__c</formula>
    <label>Primary Subscription</label>
    <type>Checkbox</type>
</CustomField>