force-app/main/default/objects/Subscription_Contact__c/fields/Product_Line_New__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Product Customer Contacts</relationshipLabel>
    <relationshipName>Product_Customer_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>