force-app/main/default/objects/Subscription_Contact__c/fields/Reference_Last_Used__c.field-meta.xml
<CustomField>
    <fullName>Reference_Last_Used__c</fullName>
    <label>Reference Last Used</label>
    <type>Date</type>
</CustomField>