force-app/main/default/objects/Subscription_Contact__c/fields/Reference_Status__c.field-meta.xml
<CustomField>
    <fullName>Reference_Status__c</fullName>
    <label>Reference Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Reference</fullName>
            </value>
            <value>
                <fullName>Candidate for Reference</fullName>
            </value>
            <value>
                <fullName>Previous Reference</fullName>
            </value>
            <value>
                <fullName>Not a Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>