force-app/main/default/objects/Subscription_Contact__c/fields/Reference_Validated_By__c.field-meta.xml
<CustomField>
    <fullName>Reference_Validated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Validated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscription_Contact3</relationshipName>
    <type>Lookup</type>
</CustomField>