force-app/main/default/objects/Subscription_Contact__c/fields/Reference_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reference_Validation_Date__c</fullName>
    <label>Reference Validation Date</label>
    <type>Date</type>
</CustomField>