force-app/main/default/objects/Subscription_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Budget Holder</fullName>
            </value>
            <value>
                <fullName>IT Administrator</fullName>
            </value>
            <value>
                <fullName>Lead User</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>IT Owner</fullName>
            </value>
            <value>
                <fullName>Reference Only</fullName>
            </value>
            <value>
                <fullName>Engaged with Product</fullName>
            </value>
            <value>
                <fullName>CoS Attendee</fullName>
            </value>
            <value>
                <fullName>Support Stakeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>