force-app/main/default/objects/Subscription_Contact__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Product Customer</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Product Customer Contacts</relationshipLabel>
    <relationshipName>Subscription_Contact</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>